# django-blog

./: .env.example  .gitignore  blog_data.json  pyproject.toml
blog/: feeds.py
blog/templates/blog/: base.html
blog/templates/blog/post/: list.html
config/: settings.py  utils.py
